[project]
name = "toridqq"
version = "1.1.2"
authors = [
  { name="Lns-XueFeng", email="1477792904@qq.com" },
]
description = "可批量监控QQ聊天窗口并将新消息发送至我的邮箱或微信"
readme = "README.md"
license = { file="LICENSE" }
requires-python = "3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"